tests/ui/parser/raw/raw-string.rs
fn main() {
    let x = r##"lol"#;
    //~^ ERROR unterminated raw string
}
